# nifo

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: nifo_ci.yml
nifo/: analyzer.py  config_detector.py  display.py  file_scanner.py  main.py
