[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nifo"
version = "0.1.0"
description = "A simple tool to print information about code in a directory"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Mohamed Elashri", email = "nifo@elashri.com"},
]

dependencies = [
    "rich==10.12.0",
    "pygments==2.10.0",
    "pathspec==0.9.0",
]

[project.urls]
Homepage = "https://github.com/MohamedElashri/nifo"
Repository = "https://github.com/MohamedElashri/nifo.git"

[project.scripts]
nifo = "nifo.main:main"

[tool.hatch.build.targets.wheel]
packages = ["nifo"]